--- a/src/components/translations/en.json
+++ b/src/components/translations/en.json
@@ -168,11 +168,13 @@
     "upload_profile_picture": "Upload Profile Picture",
     "profile_photo": "Profile Photo",
     "profile_photo_para": "It’s not much fun to host a landscape! Be sure to use a photo that clearly shows your face and doesn’t include any personal or sensitive info you’d rather not have hosts or guests see.",
-    "and": "And",
-    "and": "And",
-    "and": "And",
-    "and": "And",
-    "and": "And",
+
+
+    "audio": "Audio",
+    "no_bookmarks_yet": "No bookmarks yet",
+    "all_bookmarks": "All Bookmarks",
+    "photos": "Photos",
+    "videos": "Videos",
     "and": "And",
     "and": "And",
     "and": "And",
