--- a/src/components/translations/en.json
+++ b/src/components/translations/en.json
@@ -174,22 +174,6 @@
     "no_bookmarks_yet": "No bookmarks yet",
     "all_bookmarks": "All Bookmarks",
     "photos": "Photos",
-    "videos": "Videos",
-    "and": "And",
-    "and": "And",
-    "and": "And",
-    "and": "And",
-    "and": "And",
-    "and": "And",
-    "and": "And",
-    "and": "And",
-    "and": "And",
-    "and": "And",
-    "and": "And",
-    "and": "And",
-    "and": "And",
-    "and": "And",
-    "and": "And",
-    "and": "And"
+    "videos": "Videos"
   
   }
