Multilanguage support changes

--- a/src/components/translations/en.json
+++ b/src/components/translations/en.json
@@ -41,6 +41,7 @@
     
     "favorites": "Favorites",
     "no_more_data": "No More Data",
+    "no_user_found": "No user found",
     "lists": "Lists",
     "custom_order": "Custom Order",
     "people": "people",
@@ -174,6 +175,106 @@
     "no_bookmarks_yet": "No bookmarks yet",
     "all_bookmarks": "All Bookmarks",
     "photos": "Photos",
-    "videos": "Videos"
+    "videos": "Videos",
+
+    "upload_your_documents": "Upload Your Documents",
+    "click_here_to_upload": "Click here to upload",
+    "subscription_benefits": "SUBSCRIPTION BENEFITS",
+    "full_access_to_user_content": "Full access to this user's content",
+    "direct_message_with_this_user": "Direct message with this user",
+    "cancel_your_subscription_at_any_time": "Cancel your subscription at any time",
+    "please_add_payment_card": "PLEASE ADD A PAYMENT CARD",
+    "send_tip": "Send tip",
+    "withdraw_request": "Withdraw Request",
+    "cancel_reason": "Cancel Reason",
+    "cancel_withdraw": "Cancel Withdraw",
+    "poll_duration": "Poll Duration",
+    "days": "days",
+    "day": "day",
+    "limit": "limit",
+    "save": "Save",
+    "add": "Add",
+    "pay_now": "Pay Now",
+    "copy_link_to_post": "Copy link to post",
+    "report": "Report",
+    "add_to_blocklist_para": "I don't like the user. Add to blocklists.",
+    "delete_post": "Delete Post",
+    "likes": "Likes",
+    "close_comments": "Close Comments",
+    "view_comments": "View Comments",
+    "pay_and_see_the_Post": "Pay and See the Post",
+    "pay_amount": "Pay Amount",
+    "choose_payment_mode": "Choose Payment Mode",
+    "confirm": "Confirm",
+    "report_post": "Report Post",
+    "tip_amount": "Tip amount",
+    "choose_payment": "Choose Payment",
+    "send_request_to_admin": "Send Request to Admin",
+    "min_amount_required": "Min Amount Required",
+    "wallet_balance": "Wallet Balance",
+    "enter_amount": "Enter Amount",
+    "choose_bank_account": "Choose Bank account",
+    "no_bank_accounts_added": "No Bank accounts added",
+    "to_add_account": "To add account, please",
+    "click_here": "Click here",
+    "send_request": "Send Request",
+
+
+    "home": "Home",
+    "suggestions": "Suggestions",
+    "no_suggestions": "No Suggestions",
+    "english": "English",
+    "spanish": "Spanish",
+    "dashboard": "Dashboard",
+    "register": "Register",
+    "my_profile": "My Profile",
+    "to_subscribe": "to subscribe",
+    "to_earn": "to earn",
+    "wallet": "Wallet",
+    "your_earnings": "Your Earnings",
+    "help_and_support": "Help and Support",
+    "dark_mode": "Dark mode",
+    "meetings": "Meetings",
+    "subscriptions": "Subscriptions",
+    "account": "Account",
+    "exit": "Exit",
+    
+
+    "messages": "Messages",
+    "recent": "Recent",
+    "hide_paid_blurred_from_the_home_feed": "Hide paid blurred from the home feed",
+    "i_dont_like_this_post": "I don't like this post",
+    "hide_users_posts_from_feed": "Hide user's posts from feed",
+    "hour_ago": "hour ago",
+    "gallery": "Gallery",
+    "find": "Find",
+    "post": "Post",
+    "monthly_subscription": "Monthly Subscription",
+    "subscribe_for": "SUBSCRIBE FOR",
+    "yearly_subscription": "Yearly Subscription",
+    "cancel_subscription_conformation": "Are you sure you want to cancel subscription?",
+    "yes": "Yes",
+    "unblock_user": "UNBLOCK USER",
+    "start_chat_para": "Select any Coversation or Send a New Message from others profile",
+    "go_home": "Go Home",
+
+
+    "notifications": "Notifications",
+    "interactions": "Interactions",
+    "liked": "Liked",
+    "tipped": "Tipped",
+    "promotions": "Promotions",
+    "new_post": "NEW POST",
+    "price": "Price",
+    "upload_video_thumbnail": "Upload Video Thumbnail",
+    "upload_video_thumbnail_placeholder": "Video Thumbnail Image",
+    "price_placeholder": "Set price for the post",
+    "new_post_placeholder": "Compose new post...",
+    "updated_at": "Updated At",
+    "total_balance": "Total Balance",
+    "current_balance": "Current Balance",
+    "withDraw": "WithDraw",
+    "transactions": "TRANSACTIONS",
+    "from": "from"
   
   }
