Payment related issues are fixed and updated

--- a/src/components/translations/en.json
+++ b/src/components/translations/en.json
@@ -184,7 +184,7 @@
     "direct_message_with_this_user": "Direct message with this user",
     "cancel_your_subscription_at_any_time": "Cancel your subscription at any time",
     "please_add_payment_card": "PLEASE ADD A PAYMENT CARD",
-    "send_tip": "Send tip",
+    "send_tip": "Send Tip",
     "withdraw_request": "Withdraw Request",
     "cancel_reason": "Cancel Reason",
     "cancel_withdraw": "Cancel Withdraw",
